# sprintlens

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  restart-service.bat  run.bat  sidebar_links.json  tailwind.config.js
.claude/agents/: backend-dev.md  frontend-dev.md  qa-tester.md
.claude/skills/backend-service/: skill.md
.claude/skills/frontend-ui/: skill.md
.claude/skills/quality-check/: skill.md
.claude/skills/sprintlens-orchestrator/: skill.md
docs/: layout-guide.md
prompts/: match_schedule.txt
sprintlens/: base_store.py  burndown.py  cache_store.py  config.py  confluence_service.py  gemini_service.py  jira_service.py  logging_config.py  manual_match_store.py  match_store.py  prompt_loader.py  report_service.py  routes.py  routes_qa_gmg.py  routes_schedule.py  schedule_builder.py  schedule_matcher.py  schedule_parser.py  scheduler.py  settings_store.py  slack_report_formatter.py  slack_service.py  starred_store.py  unmatched_issues.py
static/: style.css
static/css/: style.css
templates/: base.html  index.html
templates/partials/: dashboard.html  dashboard_loading.html  home.html  qa_gmg_dashboard.html  qa_gmg_loading.html  schedule.html  schedule_loading.html  settings.html
tests/: conftest.py  test_burndown.py  test_cache_store.py  test_config.py  test_gemini_service.py  test_jira_service.py  test_manual_match_store.py  test_match_store.py  test_prompt_loader.py  test_report_service.py  test_schedule_matcher.py  test_schedule_parser.py  test_settings_store.py  test_unmatched_issues.py
